small adjustments to h2 on splash page to avoid text cutting off

--- a/app/styles/components/_splash_page.scss
+++ b/app/styles/components/_splash_page.scss
@@ -7,6 +7,7 @@
   top: 15%;
   z-index: 100;
   width: 95%;
+  margin-bottom: 0;
 
   @include flex-container(flex,row,wrap,center,center,center);
   p {
@@ -22,7 +23,7 @@
 
   @media only screen and (min-width: 640px) {
     h2 {
-      font-size: 4rem;
+      font-size: 3rem;
     }
   }
 
